--- a/package.json
+++ b/package.json
@@ -4,22 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
     "mcp": "tsx mcp/index.ts"
   },
   "devDependencies": {
-    "@types/ws": "^8.18.1",
     "prettier": "^3.7.4",
     "tsx": "^4.21.0",
-    "typescript": "~5.9.3",
-    "vite": "^7.2.4"
+    "typescript": "~5.9.3"
   },
   "dependencies": {
     "@elevenlabs/elevenlabs-js": "^2.27.0",
     "@modelcontextprotocol/sdk": "^1.24.3",
-    "dotenv": "^17.2.3",
-    "ws": "^8.18.3"
+    "dotenv": "^17.2.3"
   }
 }
