--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["mcp"]
+  "include": ["mcp", "server"]
 }
