--- a/fly.toml
+++ b/fly.toml
@@ -1,32 +1,23 @@
-# fly.toml - Fly.io configuration for Yoga Guide
+# fly.toml app configuration file generated for guru on 2025-12-10T23:31:01-05:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-app = "guru-yoga"
-primary_region = "sjc"
+app = 'guru'
+primary_region = 'ewr'
 
 [build]
-
-[env]
-  PORT = "3000"
-  NODE_ENV = "production"
 
 [http_service]
   internal_port = 3000
   force_https = true
-  # Machine stops when no connections, starts on first request
-  auto_stop_machines = "stop"
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-
-  [http_service.concurrency]
-    type = "connections"
-    hard_limit = 100
-    soft_limit = 80
-
-  # Longer timeouts for streaming
-  [http_service.http_options]
-    response_header_timeout = 0
+  processes = ['app']
 
 [[vm]]
-  memory = "512mb"
-  cpu_kind = "shared"
+  memory = '1gb'
+  cpu_kind = 'shared'
   cpus = 1
+  memory_mb = 1024
