--- a/fly.toml
+++ b/fly.toml
@@ -17,8 +17,11 @@ primary_region = 'ewr'
   min_machines_running = 0
   processes = ['app']
 
+[mounts]
+  source = "guru_data"
+  destination = "/data"
+
 [[vm]]
-  memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
   memory_mb = 1024
