--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc -b"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/express": "^4.17.21",
     "@types/uuid": "^9.0.8",
     "prettier": "^3.7.4",
@@ -20,6 +21,7 @@
   "dependencies": {
     "@anthropic-ai/claude-agent-sdk": "^0.1.62",
     "@modelcontextprotocol/sdk": "^1.24.3",
+    "better-sqlite3": "^12.5.0",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "openai": "^6.10.0",
