--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "guru",
-  "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "description": "Voice-guided yoga and meditation instruction powered by Claude with OpenAI TTS streaming audio",
+  "license": "UNLICENSED",
   "type": "module",
   "scripts": {
     "mcp": "tsx mcp/index.ts",
