--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@anthropic-ai/claude-agent-sdk": "^0.1.62",
+    "@aws-sdk/client-s3": "^3.958.0",
     "@modelcontextprotocol/sdk": "^1.24.3",
     "better-sqlite3": "^12.5.0",
     "dotenv": "^17.2.3",
