--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@anthropic-ai/claude-agent-sdk": "^0.1.76",
     "@anthropic-ai/sdk": "^0.71.2",
     "@aws-sdk/client-s3": "^3.958.0",
+    "@aws-sdk/lib-storage": "^3.966.0",
     "@modelcontextprotocol/sdk": "^1.24.3",
     "better-sqlite3": "^12.5.0",
     "dotenv": "^17.2.3",
